fix: overflow text

--- a/blocks/places/__like-button/places__like-button.css
+++ b/blocks/places/__like-button/places__like-button.css
@@ -1,5 +1,6 @@
 .places__like-button {
   display: block;
+  flex-shrink: 0;
   width: 22px;
   height: 19px;
   padding: 0;
