--- a/blocks/profile/__user-name/profile__user-name.css
+++ b/blocks/profile/__user-name/profile__user-name.css
@@ -1,12 +1,17 @@
 .profile__user-name {
   grid-area: title;
+  max-width: 500px;
   margin: 5px 0 0;
   font-size: 42px;
   line-height: 48px;
   font-weight: 500;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 @media (max-width: 541px) {
   .profile__user-name {
+    max-width: 200px;
     font-size: 27px;
     line-height: 33px;
   }
